<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <!--Use your own image here-->

    <EditText
        android:id="@+id/descPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/SelectDate"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/descPlace"
        android:imeOptions="actionNext"
        android:inputType="textMultiLine"
        android:padding="15dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country_prompt"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/sportuleField"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/sportuleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/descPlace"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/sportuleLocation"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/selectedDate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="@color/cast_expanded_controller_ad_label_background_color"
        android:textColor="@color/cardview_light_background"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColorLink="?attr/colorButtonNormal"
        android:textColorHighlight="@color/cardview_light_background"
        android:layout_above="@+id/descPlace"
        android:layout_alignEnd="@+id/descPlace"
        android:layout_alignTop="@+id/SelectDate"
        android:capitalize="characters"
        android:editable="true"
        android:hint="04/03/1942"
        android:layout_centerInParent="false" />

    <TextView
        android:text="@string/datePlace_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePlace_select"
        android:padding="15dp"
        android:clickable="true"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/descPlace"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/date_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SelectDate"
        android:padding="15dp"
        android:clickable="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/sportuleField"
        android:layout_toStartOf="@+id/selectedDate" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"

        android:id="@+id/radioGroup"
        android:layout_below="@+id/datePlace_select"
        android:layout_toEndOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton7"
            android:textSize="18sp"
            android:typeface="normal" />

        <RadioButton
            android:text="@string/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton6"
            android:layout_weight="1"
            android:checked="true"
            android:textSize="18sp" />
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:prompt="@string/country_prompt"
        android:textAlignment="center"
        android:fadingEdge="horizontal"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="39dp" />



</RelativeLayout>